# Nofflight

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  floppy.uaem  makeadf.sh  nofflight.nfo
_res/: radiallinespositions.h
_res/IFF/: 48x48.iff  goatblock.iff  goatblock32X32.raw  goatblock_32x32.iff  goatblockplt.plt  mivampirademo.iff  piston-logo-by-fra.iff  pistonlogo.plt  resistance_final.iff
_res/MOD/: Dirty_Tricks.mod  amazed_by_the_pokey.mod  amazed_by_the_pokey2.mod  chippy.mod  chippy_wip_3.h  chippy_wip_3.mod  dontstop.mod  mod.find_a_way_t
adf/: flash2021  flash2021comp
adf/data/: mivampira_zoomout.raw  resistance_final.raw
adf/s/: startup-sequence
floppy/: fcompress  fcompress.uaem  flash2021  flash2021.pp  flash2021.pp.uaem
floppy/data/: Makefile  Makefile.am  amazed_by_pokey-fartfixed.mod  mivampirademo.plt  mivampirademo.raw  piston_logo.raw  resistance_final.plt
include/: Dirty_Tricks.h  Makefile  Makefile.am  amazed_by_the_pokey.h  amazed_by_the_pokey2.h  bigfonts.h  chippy_wip_3.h  colors.h  demointro.h  findaway.h  flash2021.h  goatblock32X32.h  goatblockplt.h  goatblocks.h  goatfonts.h  main.h  medioeval_gal_LORES_16.h  medioeval_gal_LORES_16_plt.h  metaballschunky.h  mivampira_zoomoutplt.h  mivampirademocolors.h  mivampiralogo.h  pistonlogo.h  resistancelogo.h  time_stages.h  uni54.h
include/IFF/: 0_1_combined.h  0_2_combined.h  0_3_combined.h  1_1_combined.h  1_2_combined.h  1_3_combined.h  2_1_combined.h  2_2_combined.h  2_3_combined.h  A_1_combined.h  A_2_combined.h  A_3_combined.h  B_1_combined.h  B_2_combined.h  B_3_combined.h  C_1_combined.h  C_2_combined.h  C_3_combined.h  D_1_combined.h  D_2_combined.h  D_3_combined.h  E_1_combined.h  E_2_combined.h  E_3_combined.h  F_1_combined.h  F_2_combined.h  F_3_combined.h  G_1_combined.h  G_2_combined.h  G_3_combined.h  H_1_combined.h  H_2_combined.h  H_3_combined.h  I_1_combined.h  I_2_combined.h  I_3_combined.h  J_1_combined.h  J_2_combined.h  J_3_combined.h  K_1_combined.h  (+55 more)
shrinkler/: Shrinkler.lha
shrinkler/shrinkler45/Linux32/: Shrinkler
shrinkler/shrinkler45/Linux64/: Shrinkler  creacomp2.sh  creacomp2.sh~
shrinkler/shrinkler45/MacOSX/: Shrinkler
shrinkler/shrinkler46/MorphOS/: Shrinkler
src/: Makefile.am  demointro.c  flash2021.c  flashimage.c  flashimage.h  globals.h  goatblocks.c  goatlight.c  goatlight.h  main.c  metaballschunky.c  mivampiralogo.c  mod.Prova  music_ptr_linkable.s  music_ptr_linkable2.s  music_ptr_linkable3.s  physics.c  physics.h  player610.6.no_cia.bin.h  radiallineshiddenpart.c  resistancelogo.c  simplebuffertest.c  simplebuffertest.h  slidingtext.c  slidingtext.h  sprites.c  sprites.h  testmod.p61.h
src/include/: Player61.i
