#CC 			= incbin.sh
#CLEANFILES = Dirty_Tricks.h
#noinst_SCRIPTS = Dirty_Tricks.h

MODDIR=../_res/MOD/

all Dirty_Tricks.h: ${MODDIR}Dirty_Tricks.mod
#incbin.sh ${MODDIR}Dirty_Tricks.mod Dirty_Tricks.h Dirty_Tricks
	incbin.sh ${MODDIR}chippy.mod Dirty_Tricks.h Dirty_Tricks

#clean: 
#	rm *.h

        
#    incbin.sh Dirty_Tricks.mod Dirty_Tricks.h Dirty_Tricks
